--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <style>
+
+        .node {
+            fill: #ddd;
+            stroke: #fff;
+        }
+
+        .label {
+            font: 10px sans-serif;
+            text-anchor: middle;
+        }
+
+    </style>
 </head>
 <body>
 <div id="app">
@@ -69,13 +83,203 @@
 
     function calculate_diagram_height(genome_properties_tree, global_parameters)
     {
-        let number_leaf_nodes = genome_properties_tree.number_of_leaves;
-        let row_height = global_parameters['row_height'];
         let row_spacer = global_parameters['row_spacer'];
         let top_offset = global_parameters['top_offset'];
-        let tree_height = (row_height * number_leaf_nodes) + (row_spacer * (number_leaf_nodes - 1));
+        let tree_height = calculate_tree_height(genome_properties_tree, global_parameters);
 
         return tree_height + top_offset + row_spacer;
+    }
+
+    function calculate_tree_height(genome_properties_tree, global_parameters){
+        let number_leaf_nodes = genome_properties_tree.number_of_leaves;
+        let row_spacer = global_parameters['row_spacer'];
+        let row_height = global_parameters['row_height'];
+
+        return (row_height * number_leaf_nodes) + (row_spacer * (number_leaf_nodes - 1))
+    }
+
+    function draw_heatmap(genome_properties_tree, global_parameters, heatmap_parameters, svg)
+    {
+        let heatmap_cell_width = heatmap_parameters['cell_width'];
+        let heatmap_column_spacer = heatmap_parameters['column_spacer'];
+        let row_height = global_parameters['row_height'];
+        let row_spacer = global_parameters['row_spacer'];
+
+        let axes_parameters = heatmap_parameters['axes'];
+
+        let heatmap_data = genome_properties_tree.leaf_data;
+
+        let x_elements = d3.set(heatmap_data.map(function (item) {
+            return item.genome;
+        })).values();
+
+        let y_elements = d3.set(heatmap_data.map(function (item) {
+            return item.propertyName;
+        })).values();
+
+        let total_heatmap_width = x_elements.length * (heatmap_cell_width + heatmap_column_spacer);
+
+        let xScale = d3.scale.ordinal()
+                       .domain(x_elements)
+                       .rangeBands([0, total_heatmap_width]);
+
+        let xAxis = d3.svg.axis()
+                      .scale(xScale)
+                      .tickFormat(function (d) {
+                          return d;
+                      })
+                      .orient("top");
+
+        let yScale = d3.scale.ordinal()
+                       .domain(y_elements)
+                       .rangeBands([0, y_elements.length * (row_height + row_spacer)]);
+
+        let yAxis = d3.svg.axis()
+                      .scale(yScale)
+                      .tickFormat(function (d) {
+                          return d;
+                      })
+                      .orient("right");
+
+        let colorScale = d3.scale.ordinal()
+                           .domain(['NO', 'PARTIAL', 'YES'])
+                           .range(["#737d84", "#FFD700", "#27AE60"]);
+
+        svg.selectAll('rect')
+           .data(heatmap_data)
+           .enter().append('g').append('rect')
+           .attr('class', 'cell')
+           .attr('width', heatmap_cell_width)
+           .attr('height', row_height)
+           .attr('y', function (heatmap_data_point) {
+               return yScale(heatmap_data_point.propertyName);
+           })
+           .attr('x', function (heatmap_data_point) {
+               return xScale(heatmap_data_point.genome);
+           })
+           .attr('fill', function (heatmap_data_point) {
+               return colorScale(heatmap_data_point.propertyStatus);
+           });
+
+
+        svg.append("g")
+           .attr("class", "y axis")
+           .call(yAxis)
+           .attr("transform", function () {
+               return "translate(" + (total_heatmap_width + axes_parameters['y_axis_label_offset']) + ")";
+           })
+           .selectAll('text')
+           .attr('font-weight', 'normal');
+
+        svg.append("g")
+           .attr("class", "x axis")
+           .call(xAxis)
+           .selectAll('text')
+           .attr('font-weight', 'normal')
+           .style("text-anchor", "start")
+           .attr("dx", ".8em")
+           .attr("dy", ".5em")
+           .attr("transform", function () {
+               return "rotate(-65)";
+           });
+    }
+
+    function draw_tree(genome_properties_tree, global_parameters, tree_parameters, tree)
+    {
+        let tree_height = calculate_tree_height(genome_properties_tree, global_parameters);
+        let tree_width = calculate_tree_width(genome_properties_tree, tree_parameters);
+
+        let partition = d3.layout.partition()
+                          .size([tree_height, tree_width])
+                          .value(function (leaf_tree_node) {
+                              console.log(leaf_tree_node);
+                              let leaf_node_id = leaf_tree_node.node_id;
+                              let leaf_node_global_tree = genome_properties_tree.node_index[leaf_node_id];
+
+                              let number_of_childs = 1;
+                              if (leaf_node_global_tree.enabled)
+                              {
+                                  number_of_childs = leaf_node_global_tree.children.length;
+                              }
+
+                              console.log(number_of_childs);
+                              return number_of_childs;
+                          });
+
+        let nodes = partition.nodes(genome_properties_tree.tree_no_leaves);
+
+        tree.selectAll(".node")
+            .data(nodes)
+            .enter().append("rect")
+            .attr("class", "node")
+            .attr("x", function (d) {
+                return d.y + tree_parameters['column_spacer'] + tree_parameters['label_width'];
+            })
+            .attr("y", function (d) {
+                return d.x;
+            })
+            .attr("width", function () {
+                return tree_parameters['cell_width'];
+            })
+            .attr("height", function (d) {
+                return (d.dx - global_parameters['row_spacer'] );
+            })
+            .style("fill", function () {
+                return ' #A7A9AD';
+            });
+
+        tree.selectAll(".label")
+            .data(nodes.filter(function (d) {
+                return d.dy > 6;
+            }))
+            .enter().append("text")
+            .attr("class", "label")
+            .attr("dy", ".35em")
+            .attr("transform", function (d) {
+                return "translate(" + (d.y + tree_parameters['column_spacer']) + "," + (d.x + d.dx / 2) + ")rotate(270)";
+            })
+            .text(function (d) {
+                return d.name;
+            });
+    }
+
+    function draw_diagram(diagram_parameters, genome_properties_tree)
+    {
+        let margin_parameters = diagram_parameters['margins'];
+        let global_parameters = diagram_parameters['global'];
+        let heatmap_parameters = diagram_parameters['heatmap'];
+        let tree_parameters = diagram_parameters['tree'];
+
+        let left_margin = margin_parameters['left'];
+        let right_margin = margin_parameters['right'];
+        let top_margin = margin_parameters['top'];
+        let bottom_margin = margin_parameters['bottom'];
+
+        let diagram_height = calculate_diagram_height(genome_properties_tree, global_parameters);
+        let tree_width = calculate_tree_width(genome_properties_tree, tree_parameters);
+        let heatmap_width = calculate_heatmap_width(genome_properties_tree, heatmap_parameters);
+
+        let diagram_width = tree_width + heatmap_width;
+
+        let svg_height = diagram_height + top_margin + bottom_margin;
+        let svg_width = diagram_width + left_margin + right_margin;
+
+        let svg = d3.select('.heatmap')
+                    .append("svg")
+                    .attr("width", svg_width)
+                    .attr("height", svg_height);
+
+        let diagram_top_offset = (margin_parameters.top + global_parameters['top_offset']);
+        let heatmap_left_offset = margin_parameters.left + tree_width + heatmap_parameters['cell_width'];
+
+        let heatmap = svg.append("g")
+                         .attr("transform", "translate(" + heatmap_left_offset + "," + diagram_top_offset + ")");
+
+        let tree = svg.append("g")
+                      .attr("transform", "translate(" + (margin_parameters.left) + "," + diagram_top_offset + ")");
+
+        draw_heatmap(genome_properties_tree, global_parameters, heatmap_parameters, heatmap);
+        draw_tree(genome_properties_tree, global_parameters, tree_parameters, tree);
     }
 
     $.getJSON("data/example_genome_property.json", function (genome_properties_data) {
@@ -83,117 +287,7 @@
 
             let genome_properties_tree = new Genome_Properties_Tree(genome_properties_data);
 
-            console.log(diagram_parameters);
-            console.log(genome_properties_tree);
-
-            let margin_parameters = diagram_parameters['margins'];
-            let global_parameters = diagram_parameters['global'];
-            let heatmap_parameters = diagram_parameters['heatmap'];
-            let tree_parameters = diagram_parameters['tree'];
-
-            let left_margin = margin_parameters['left'];
-            let right_margin = margin_parameters['right'];
-            let top_margin = margin_parameters['top'];
-            let bottom_margin = margin_parameters['bottom'];
-
-            let diagram_height = calculate_diagram_height(genome_properties_tree, global_parameters);
-            let tree_width = calculate_tree_width(genome_properties_tree, tree_parameters);
-            let heatmap_width = calculate_heatmap_width(genome_properties_tree, heatmap_parameters);
-
-            let diagram_width = tree_width + heatmap_width;
-
-            let svg_height = diagram_height + top_margin + bottom_margin;
-            let svg_width = diagram_width + left_margin + right_margin;
-
-            console.log(genome_properties_tree.leaf_data);
-            console.log(svg_height);
-            console.log(svg_width);
-
-            let heatmap_cell_width = heatmap_parameters['cell_width'];
-            let heatmap_column_spacer = heatmap_parameters['column_spacer'];
-
-            const itemSize = heatmap_cell_width + heatmap_column_spacer;
-            const margin = margin_parameters;
-
-            let heatmap_data = genome_properties_tree.leaf_data;
-
-            let x_elements = d3.set(heatmap_data.map(function (item) {
-                return item.genome;
-            })).values();
-
-            let y_elements = d3.set(heatmap_data.map(function (item) {
-                return item.propertyName;
-            })).values();
-
-            let xScale = d3.scale.ordinal()
-                           .domain(x_elements)
-                           .rangeBands([0, x_elements.length * itemSize]);
-
-            let xAxis = d3.svg.axis()
-                          .scale(xScale)
-                          .tickFormat(function (d) {
-                              return d;
-                          })
-                          .orient("top");
-
-            let yScale = d3.scale.ordinal()
-                           .domain(y_elements)
-                           .rangeBands([0, y_elements.length * itemSize]);
-
-            let yAxis = d3.svg.axis()
-                          .scale(yScale)
-                          .tickFormat(function (d) {
-                              return d;
-                          })
-                          .orient("right");
-
-            let colorScale = d3.scale.ordinal()
-                               .domain(['NO', 'PARTIAL', 'YES'])
-                               .range(["#737d84", "#FFD700", "#27AE60"]);
-
-            let svg = d3.select('.heatmap')
-                        .append("svg")
-                        .attr("width", svg_width)
-                        .attr("height",svg_width)
-                        .append("g")
-                        .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-            svg.selectAll('rect')
-               .data(heatmap_data)
-               .enter().append('g').append('rect')
-               .attr('class', 'cell')
-               .attr('width', heatmap_cell_width)
-               .attr('height', heatmap_cell_width)
-               .attr('y', function (heatmap_data_point) {
-                   return yScale(heatmap_data_point.propertyName);
-               })
-               .attr('x', function (heatmap_data_point) {
-                   return xScale(heatmap_data_point.genome);
-               })
-               .attr('fill', function (heatmap_data_point) {
-                   return colorScale(heatmap_data_point.propertyStatus);
-               });
-
-            svg.append("g")
-               .attr("class", "y axis")
-               .call(yAxis)
-               .attr("transform", function () {
-                   return "translate(" + (x_elements.length * (heatmap_cell_width + 1)) + ")";
-               })
-               .selectAll('text')
-               .attr('font-weight', 'normal');
-
-            svg.append("g")
-               .attr("class", "x axis")
-               .call(xAxis)
-               .selectAll('text')
-               .attr('font-weight', 'normal')
-               .style("text-anchor", "start")
-               .attr("dx", ".8em")
-               .attr("dy", ".5em")
-               .attr("transform", function () {
-                   return "rotate(-65)";
-               });
+            draw_diagram(diagram_parameters, genome_properties_tree);
         });
     });
 </script>
