Extracted redrawing into its own function.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
             let genome_properties_tree = new Genome_Properties_Tree(genome_properties_data);
 
-            draw_diagram(diagram_parameters, genome_properties_tree);
+            draw_diagram(genome_properties_tree, diagram_parameters);
         });
     });
 </script>
