--- a/index.html
+++ b/index.html
@@ -7,40 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <style>
-        .node:hover {
-            fill: #b0b0b0;
-            cursor: pointer;
-        }
-
-        .node {
-            fill: #ddd;
-            stroke: #fff;
-        }
-
-        .label {
-            font: 10px sans-serif;
-            text-anchor: middle;
-        }
-
-        .link_out {
-            fill: #848484;
-        }
-
-        .link_out:hover {
-            fill: black;
-            cursor: help;
-        }
-
-        .axis path,
-        .axis line {
-            fill: none;
-            stroke: #000;
-            shape-rendering: crispEdges;
-            stroke-width: 2px;
-        }
-
-    </style>
+    <link href="css/style.css" rel="stylesheet"/>
 </head>
 <body>
 <div id="app">
