Add realistic dataset for testing.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <!-- Custom JS for creating the visualization. -->
 <script type="text/javascript">
-    $.getJSON("data/example_genome_property.json", function (genome_properties_data) {
+    $.getJSON("data/gp_assignments.json", function (genome_properties_data) {
         $.getJSON("configs/diagram_configuration.json", function (diagram_parameters) {
 
             let genome_properties_tree = new Genome_Properties_Tree(genome_properties_data);
