--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.5/css/select2.min.css"
+          integrity="sha256-xJOZHfpxLR/uhh1BwYFS5fhmOAdIRQaiOul5F/b7v3s=" crossorigin="anonymous"/>
 
+    <link rel="stylesheet" href="css/select2-bootstrap4.min.css"/>
     <link href="css/style.css" rel="stylesheet"/>
 </head>
 <body>
@@ -25,8 +28,9 @@
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <select class="property_selection" name="properties" title="Property Search">
+                    <option></option>
+                </select>
             </form>
         </div>
     </nav>
@@ -59,13 +63,14 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.5/js/select2.full.min.js"
+        integrity="sha256-FcVIknBiVRk5KLQeIBb9VQdtFRMqwffXyZ+D8q0gQro=" crossorigin="anonymous"></script>
 
 <!-- Custom JS for Genome_Properties_Tree object the visualization. -->
 <script type="text/javascript" src="./js/genome_properties_tree.js"></script>
 
 <!-- Custom JS for drawing the visualization. -->
 <script type="text/javascript" src="./js/draw_diagram.js"></script>
-
 
 <!-- Custom JS for creating the visualization. -->
 <script type="text/javascript">
@@ -74,6 +79,21 @@
             let genome_properties_tree = new Genome_Properties_Tree(genome_properties_data);
             genome_properties_tree.reset();
             draw_diagram(genome_properties_tree, diagram_parameters);
+
+            $(document).ready(function () {
+                $('.property_selection').select2(
+                    {
+                        placeholder: 'Search for properties',
+                        theme: "bootstrap4",
+                        data: genome_properties_tree.select_data
+                    });
+            });
+
+            $('.property_selection').on('select2:select', function (event) {
+                let data = event.params.data;
+                let genome_property_id = data.id.split('-')[1];
+                draw_diagram_expand_to_genome_property(genome_properties_tree, diagram_parameters, genome_property_id)
+            });
 
             $('.reset').on('click', function () {draw_reset_diagram(genome_properties_tree, diagram_parameters)})
         });
