Fixed autoscroll to element selections in safari.

--- a/index.html
+++ b/index.html
@@ -56,8 +56,6 @@
 
 <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js"
-        integrity="sha256-7QS1cHsH75h3IFgrFKsdhmKHHpWqF82sb/9vNLqcqs0=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.js"
         integrity="sha256-gfQwA6PlkZsLqWu4bU4hXPrbTqzixm0B5MdvBLI+Oas=" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
@@ -90,6 +88,7 @@
             });
 
             $('.property_selection').on('select2:select', function (event) {
+                event.preventDefault();
                 let data = event.params.data;
                 let genome_property_id = data.id.split('-')[1];
                 draw_diagram_expanded_to_property(genome_properties_tree, diagram_parameters, genome_property_id)
