--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="visualization"></div>
     </div>
 
-    <div class="container-fluid fixed-bottom legend-row">
+    <div class="container-fluid fixed-bottom legend-row d-none d-md-block">
         <div class="row justify-content-end">
             <div class="col-2">
                 <div class="card text-white bg-info mb-3">
