Added updates to JS.

--- a/html/upload_view.html
+++ b/html/upload_view.html
@@ -35,11 +35,7 @@
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/">Projects</a></li>
-                <li class="active"><a href="#">Upload<span class="sr-only">(current)</span></a>
-                </li>
-                <li><a href="/logout">Logout</a></li>
-                <li id="bug_logo"><a href="#"><span>Feedback</span></a></li>
+                <li class="active"><a href="#">Upload<span class="sr-only">(current)</span></a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
