--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <button class="btn btn-outline-success reset" type="button">Reset</button>
+                    <button class="btn btn-outline-danger reset" type="button">Reset</button>
+                </li>
+                <li class="nav-item px-2">
+                    <button class="btn btn-outline-success" type="button" onclick="window.location.href='./html/upload_view.html'">Upload</button>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
