--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                     <button class="btn btn-outline-danger reset" type="button">Reset</button>
                 </li>
                 <li class="nav-item px-2">
+                    <button class="btn btn-outline-danger expand-all" type="button">Expand All</button>
+                </li>
+                <li class="nav-item">
                     <button class="btn btn-outline-success" type="button"
                             onclick="window.location.href='./html/upload_view.html'">Upload
                     </button>
